@@ -106,6 +106,8 @@
                   _description="The name of a bouncer in the atmosphere to authenticate against." />
         <property name="issuer-class" type="string"
                   _description="The Python class of the Keycard issuer to use." />
+	<property name="allow-default" type="bool"
+		  _description="Whether failure to communicate with the bouncer should make the component accept the connection." />
 
         <property name="ip-filter" type="string" multiple="yes"
                   _description="The IP network-address/prefix-length to filter out of logs." />
